@@ -1,3 +1,7 @@
+2012-05-08  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_ctrans.inc, geo_normalize.c: Add CT_HotineObliqueMercatorAzimuthCenter.
+
 2012-05-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: Correct GTIFGetDefn() so that user defined
